--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
 
 /* Background settings */
 :root {
+  --background-image: url(https://img.freepik.com/free-photo/anime-boy-balcony-winter-night_23-2152020162.jpg?t=st=1763615883~exp=1763619483~hmac=479b779d60b0f7812d75b0903da79d640454035c19f766d8996dbff8233afcd3&w=1480);
   --background-position: center;
   --background-size: cover;
   --background-attachment: fixed;
